--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,26 @@
-nav {
-  
+header nav {
+  display: flex;
+  gap: 40px;
+  padding: 24px 0;
+  font-size: 20px;
+  font-weight: 200;
+}
+
+body {
+  max-width: 920px;
+  margin: 0 auto;
+  color: #000000;
+  background: #ffffff;
+}
+
+a,
+button {
+  color: #000000;
+}
+.welcome {
+  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+  text-align: center;
+  margin-top: 200px;
+  font-weight: bold;
+  font-size: 30px;
 }
